Fix too close icons + up background

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -20,6 +20,11 @@
 	height: 37px;
 }
 
+.icon_fix{
+	border-right: 1px solid rgb(0, 0, 0);
+	padding-right: 5px;
+	margin-right: 5px;
+}
 
 .card {
   overflow: hidden;
